--- a/src/Components/App/App.module.css
+++ b/src/Components/App/App.module.css
@@ -1,10 +1,17 @@
 .app_container {
   margin: 0;
   padding: 0;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .app_body {
   border-style: solid;
   border-width: 2px;
   border-color: black;
+
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
 }
