--- a/src/Components/Simulation/Simulation.module.css
+++ b/src/Components/Simulation/Simulation.module.css
@@ -1,8 +1,4 @@
-.simulation_scene_block {
-  height: 50px;
-  width: 50px;
-  background-color: rgb(255, 255, 255);
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-width: 5px;
+.simulation_scene {
+  flex: 1 1 0%;
+  overflow: hidden;
 }
