added text to blocks

--- a/src/Components/App/App.module.css
+++ b/src/Components/App/App.module.css
@@ -7,9 +7,7 @@
 }
 
 .app_body {
-  border-style: solid;
-  border-width: 2px;
-  border-color: black;
+  color: var(--white);
 
   display: flex;
   flex-direction: column;
