--- a/src/Components/Simulation/Simulation.module.css
+++ b/src/Components/Simulation/Simulation.module.css
@@ -1,33 +1,47 @@
 .simulation_scene {
   flex: 1 1 0%;
   overflow: hidden;
+  max-height: 100%;
   margin: 1%;
   border: 2px solid black;
   background-color: rgba(27, 33, 37, 0.6);
 }
 
 .simulation_console {
+  grid-area: console;
   align-self: center;
   margin: 1%;
   background-color: rgba(27, 33, 37, 0.6);
   color: white;
   border: 2px solid black;
-  width: 40%;
-  height: 15%;
   padding: 1%;
   overflow-y: scroll;
   font-size: 15px;
+  width: 100%;
+  height: 100px;
 }
 
 .simulation_toolbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "left-side console right-side";
+  height: 15%;
+  width: 100%;
+  margin-bottom: 1%;
 }
 
-.simulation_toolbar_body {
+.simulation_toolbar_field {
   display: flex;
-  gap: 1vw;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.simulation_toolbar_addblock {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 .simulation_toolbar_difficulty {
