--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
   margin: 25px;
   display: flex;
   flex-direction: row;
-  gap: 40px;
+  gap: 300px;
 }
 
 .navbar_navigation_link {
@@ -19,13 +19,14 @@
   height: 45px;
   text-decoration: none;
   color: var(--white);
-  font-size: 20px;
+  font-size: 40px;
   border-radius: 12px;
   transition: all 0.1s ease-in-out;
 }
 
 .navbar_navigation_link:hover {
-  transform: scale(1.05);
+  transform: scale(1.2);
+  transition: 0.5s;
 }
 
 .navbar_navigation_link:active {
