--- a/src/Components/Simulation/Simulation.css
+++ b/src/Components/Simulation/Simulation.css
@@ -2,12 +2,38 @@
   flex: 1 1 0%;
   overflow: hidden;
   max-height: 100%;
+  min-height: 70%;
   margin: 1%;
   border: 2px solid black;
   background-color: rgba(27, 33, 37, 0.7);
 }
 
-.simulation_console {
+.simulation_toolbar {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "left-side console right-side";
+  min-height: 150px;
+  width: 97%;
+  margin: 1%;
+}
+
+@media (max-width: 1024px) {
+  .simulation_toolbar {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 1024px) {
+  .simulation_toolbar_leftside {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.simulation_toolbar_console {
   grid-area: console;
   align-self: center;
   margin: 1%;
@@ -18,19 +44,10 @@
   overflow-y: scroll;
   font-size: 15px;
   width: 100%;
-  height: 100px;
+  min-height: 125px;
+  max-height: 125px;
 }
 
-.simulation_toolbar {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-template-areas: "left-side console right-side";
-  height: 15%;
-  width: 100%;
-  margin-bottom: 1%;
-}
 .simulation_toolbar_leftside {
   grid-area: "left-side";
   display: flex;
