--- a/src/Components/Simulation/Simulation.css
+++ b/src/Components/Simulation/Simulation.css
@@ -1,3 +1,10 @@
+.simulation {
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0%;
+}
+
 .simulation_scene {
   flex: 1 1 0%;
   overflow: hidden;
@@ -180,11 +187,13 @@
   gap: 1vw;
 }
 .simulation_scene_block--selected {
+  transition: 0.25s;
   filter: drop-shadow(0px 0px 20px var(--red));
 }
 
 .simulation_scene_block--orphaned {
-  filter: drop-shadow(0px 0px 20px var(--red));
+  transition: 1s;
+  fill-opacity: 0.1;
 }
 
 .simulation_scene_block_text {
