--- a/src/Components/Simulation/Simulation.css
+++ b/src/Components/Simulation/Simulation.css
@@ -154,6 +154,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-self: center;
   margin: 30px;
   gap: 10px;
 }
@@ -162,6 +163,7 @@
   background-color: var(--grey);
   border: none;
   font-size: 20px;
+  height: 40px;
   border-radius: 10px;
   padding: 5px;
 }
