--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
 
   margin: 0;
   font-family: "Montserrat", sans-serif;
+  color: var(--white);
   background: radial-gradient(at bottom right, var(--red) 0%, var(--dark) 70%);
   /*
   background: rgb(27, 33, 37);
@@ -16,12 +17,6 @@ body {
     rgba(184, 66, 77, 1) 100%
   );*/
   padding: 0px;
-}
-html,
-body,
-#root,
-#root > div {
-  height: 100vh;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
