--- a/src/Components/Homepage/Homepage.css
+++ b/src/Components/Homepage/Homepage.css
@@ -1,5 +1,6 @@
 .homepage {
   margin: 10%;
+  margin-top: 5%;
   display: grid;
   gap: 40px;
   grid-template-columns: 1fr 1fr;
@@ -8,12 +9,12 @@
     "header header"
     "first-text first-image"
     "second-image second-text"
-    "third-text third-text"
-    "third-image third-image";
+    "third-text third-image";
 }
 
 .homepage > div {
   padding: 20px;
+  overflow-wrap: break-word;
 }
 
 .homepage_header {
@@ -29,4 +30,40 @@
   font-size: 40px;
   text-align: start;
   margin: 20px;
+  margin-bottom: 25vh;
+}
+
+.homepage_body > img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 1200px) {
+  .homepage {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .homepage > div {
+    padding: 0;
+    overflow-wrap: break-word;
+  }
+
+  .homepage_header {
+    grid-area: header;
+    text-align: center;
+    align-self: center;
+    font-size: 20px;
+  }
+
+  .homepage_body {
+    justify-content: center;
+    gap: 50px;
+    font-size: 20px;
+    text-align: start;
+    margin: 20px;
+    margin-bottom: 25vh;
+  }
 }
